Fixing display overflow-x

--- a/style.css
+++ b/style.css
@@ -32,6 +32,8 @@ body {
   border-radius: 5px;
   font-weight: bold;
   font-size: 20px;
+  overflow-x: auto;
+  white-space: nowrap;
 }
 
 .buttons {
